# winner_of_day

./: .gitignore  pyproject.toml
scripts/: set_stat.py
src/winner_of_day/: __main__.py  logger.py
src/winner_of_day/bot/: bot.py  data.py  messages_data.py  utils.py
src/winner_of_day/bot/callbacks/: callbacks.py  winner.py
src/winner_of_day/gpt/: gpt.py
src/winner_of_day/suno/: api.py  suno.py
